--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.0.0",
     "@angular/common": "~7.0.0",
     "@angular/compiler": "~7.0.0",
     "@angular/core": "~7.0.0",
@@ -19,8 +18,17 @@
     "@angular/http": "~7.0.0",
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
+    "@angular/pwa": "^0.11.4",
     "@angular/router": "~7.0.0",
+    "@angular/service-worker": "~7.0.0",
+    "@types/jquery": "^3.3.28",
+    "angular-font-awesome": "^3.1.2",
+    "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
+    "ng5-slider": "^1.1.11",
+    "popper.js": "^1.14.6",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
